@@ -22,6 +22,7 @@ Version 1.4.22 - SVN
   - Fixed sqauth_read_password() for plugins on the login_verified hook.
   - Added SMTP SASL PLAIN authentication option to configuration tool
     (core support for such is not new).
+  - Gmail doens't support standard search commands; removed sort buttons.
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
